1999-02-22  Timur Bakeyev  <mc@bat.ru>

	* calendar.c: According to configured values, use either tm.tm_zone
	or tzname. In last case, also declare it extern.
	
	* prop.c: langinfo.h not available everywhere. Wrapped. BTW, works
	fine without it.

1999-02-20  Tomas Ogren  <stric@ing.umu.se>

	* main.c (init_username): Made use of g_get_{user,real}_name() instead
	of our own home-brew...

1999-02-17  Sergey Panov <sipan@mit.edu>

	* gnome-month-item.c,gnome-month-item.h,goto.c,mark.h,
	month-view.c,prop.c,quick-view.c,year-view.c: will define 
	fonts via fontset. Friendlier to locales that use iso8859-[^1]
	and koi8-r encodings. Does not solve problem for Asian languiges
	--- better solution is needed (e.g. standart GNOME fontstyles
	defined in gtkrc).	
	
1999-02-16  Sergey Panov <sipan@mit.edu>

	* main.c: Use N_() macro for color settings labels in
	color_props structure.
	
1999-02-15  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* goto.c (goto_dialog): Indentation fixes.

1999-02-15  Tomas Ogren  <stric@ing.umu.se>

	* goto.c: Made a private copy of what localtime() returns, to be able
	to keep the data after more calls to localtime().

1999-02-11  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* main.c (save_default_calendar): New function.  Saves the
	calendar if it is the user's default calendar

	* gncal-full-day.c (unrecur_appointment): 
	* gncal-day-panel.c (day_view_range_activated): 
	* eventedit.c (ee_ok): 
	* gncal-todo.c (ok_button): Added autosave for the default
	calendar. 

1999-02-09  Tomas Ogren  <stric@ing.umu.se>

	* main.c: Removed the gtk_widget_realize call.

1999-02-06  Changwoo Ryu  <cwryu@adam.kaist.ac.kr>

	* gncal.desktop: Added Korean translations.

1999-02-04  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* eventedit.c (date_edit_new): New convenience function to create
	a properly-configured date editor widget.

1999-02-03  Federico Mena Quintero  <federico@nuclecu.unam.mx>
